# FinTrack

./: README.md  app.py  pyproject.toml  requirements.txt  site.db
static/: account.css  dashboard.css  home.css  login.css  register.css  reset_request.css  reset_token.css
templates/: account.html  dashboard.html  home.html  login.html  register.html  reset_request.html  reset_token.html  transaction_display.html
