[tool.poetry]
name = "fintrack"
version = "0.1.0"
description = "Financial Tracking Web Application using Plaid API"
authors = ["Love-P"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "^3.5.0"
bcrypt = "^3.2.0"
blinker = "^1.6.3"
cffi = "^1.15.0"
click = "^8.1.2"
dnspython = "^2.2.1"
email-validator = "^1.1.3"
flask = "^2.1.1"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.0"
flask-mail = "^0.9.1"
flask-sqlalchemy = "^2.5.1"
flask-wtf = "^1.0.1"
idna = "^3.3"
importlib-metadata = "^4.11.3"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.1"
markupsafe = "^2.1.1"
nulltype = "^2.3.1"
pycparser = "^2.21"
plaid-python = "^16.0.0"
python-dateutil = "^2.8.2"
six = "^1.16.0"
sqlalchemy = "^1.4.35"
typing-extensions = "^4.8.0"
urllib3 = "^2.0.7"
werkzeug = "^2.1.1"
wtforms = "^3.1.0"
zipp = "^3.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
